--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -14,8 +14,8 @@
 <% @cocktails.each do |x| %>
 
 <div class="card" style="width: 18rem;">
-
   <div class="card-body">
+      <%= cl_image_tag x.photo, height: 150, width: 200, crop: :fill %>
     <h5 class="card-title"><%= x.name %> </h5>
     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     <%= link_to "Recipe", cocktail_path(x), class: "btn btn-primary"%>
