--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,8 @@
 <%= simple_form_for(@cocktail) do |f|%>
     <%= f.input :name %>
+    <%= f.input :photo %>
+    <%= f.input :photo_cache, as: :hidden %>
     <%= f.button :submit, class: 'btn btn-success' %>
     <% end %>
 
+<%= link_to "go back ",  cocktails_path, class: "btn btn-primary my-5"%>
