--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,5 +1,5 @@
 <h2>  <%= @cocktail.name%></h2>
-
+   <%= cl_image_tag @cocktail.photo, height: 150, width: 200, crop: :fill %>
 
 
 <% @cocktail.doses.each do |x| %>
